--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,18 @@ logging.level.io.jmix.core.AccessLogger = debug
 
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
+
+jmix.search.elasticsearch.url=http://localhost:9200
+#for versions 8+
+#jmix.search.elasticsearch.login=elastic
+#jmix.search.elasticsearch.password=M2bLQZKjndXf=-k9pigh
+
+# Quartz cron setting
+#jmix.search.indexingQueueProcessingCron=0/1 * * * * ?
+
+## do not use Quartz at all
+jmix.search.useDefaultIndexingQueueProcessingQuartzConfiguration=false
+
+jmix.search.changedEntitiesIndexingEnabled = false
+
+jmix.search.searchIndexNamePrefix=jmix_pm_
